[gd_scene load_steps=3 format=3 uid="uid://prpawadsl6pg"]

[ext_resource type="Script" path="res://scenes/game/characters/enemies/Enemy.gd" id="1_rgckv"]
[ext_resource type="PackedScene" uid="uid://b6mrv2wk6g7xl" path="res://scenes/game/systems/characters systems/healt_component.tscn" id="3_xlxon"]

[node name="Enemy" type="CharacterBody2D"]
z_index = 2
scale = Vector2(0.216078, 0.216078)
collision_layer = 7
collision_mask = 2
motion_mode = 1
script = ExtResource("1_rgckv")
dmg_per_hit = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -104, -88, -72, -136, 80, -56, 0, 0, 208, 56, 0, 136, 80, 88, -72)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 102.58
path_max_distance = 400.0
avoidance_enabled = true
radius = 100.0
debug_enabled = true

[node name="HealtComponent" parent="." instance=ExtResource("3_xlxon")]

[node name="Polygon2D2" type="Polygon2D" parent="."]
color = Color(1, 0.0196078, 0.27451, 1)
polygon = PackedVector2Array(0, -104, -88, -72, -136, 80, -56, 0, 0, 208, 56, 0, 136, 80, 88, -72)

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.152941, 0, 0.133333, 1)
polygon = PackedVector2Array(0, -72, -40, -56, 0, 144, 40, -56)

[node name="Polygon2D3" type="Polygon2D" parent="."]
color = Color(0.152941, 0, 0.133333, 1)
polygon = PackedVector2Array(-112, 40, -72, -56, -56, -64, -56, -16)

[node name="Polygon2D4" type="Polygon2D" parent="."]
rotation = -3.14159
scale = Vector2(1, -1)
color = Color(0.152941, 0, 0.133333, 1)
polygon = PackedVector2Array(-112, 40, -72, -56, -56, -64, -56, -16)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="sg_death" from="HealtComponent" to="." method="_on_healt_component_sg_death"]
[connection signal="sg_hit" from="HealtComponent" to="." method="_on_healt_component_sg_hit"]
